option(
    'pic_statlibs',
     type        : 'boolean',
     value       : false,
     description : 'Compile static libraries with -fPIC (pos independent)'
     )
option(
    'sharedlib',
     type        : 'boolean',
     value       : false,
     description : 'compile as shared libraries'
     )
option(
    'timestamp_64bit',
     type        : 'boolean',
     value       : true,
     description : 'timestamps are 64 bit long instead of 32'
     )
option(
    'bare',
     type        : 'boolean',
     value       : false,
     description : 'No extra content compilation (tests, examples, etc...)'
     )
